# porous_media_flow_bmfia

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  darcy.cc  darcy.h  darcy_adjoint.cc  darcy_general.h  parameter_reader.cpp  parameter_reader.h  parameters_example.json  preconditioner.h  random_permeability.h
